Fri Jul 15 12:46:14 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_root/root_sh.cpp:
        * TAO_IDL/be/be_visitor_root/root_ch.cpp:

          Added missing check for suppress option before generating
          skeleton arg traits, and made layout changes to both stub
          and skeleton root visitors.

Fri Jul 15 11:59:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Monitor/Monitor.h:
          Fixed compile error

Fri Jul 15 09:00:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_util.cpp:
          Fixed layout of one of the help messages

Fri Jul 15 08:33:20 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ifr_client_skel.mpb:
        * MPC/config/ifrservice.mpb:
        * orbsvcs/IFR_Service/IFR_Service.mpc:
        * orbsvcs/orbsvcs/IFRService.mpc:
        * orbsvcs/orbsvcs/IFRService/ComponentContainer_i.h:
        * orbsvcs/orbsvcs/IFRService/ComponentDef_i.h:
        * orbsvcs/orbsvcs/IFRService/EventPortDef_i.h:
        * orbsvcs/orbsvcs/IFRService/HomeDef_i.h:
        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:
        * orbsvcs/orbsvcs/IFRService/IRObject_i.h:
        * orbsvcs/orbsvcs/IFRService/ProvidesDef_i.cpp:
        * tao/IFR_Client/IFR_Client.mpc:
        * tao/IFR_Client/ifr_client_skel_export.h:
          Generate a new IFR_Client_skel library that contains all
          skeletons for the IFR_Client. This is generated under TAO/tao/IFR_Client
          and than used by the IFRService

        * orbsvcs/orbsvcs/IFRService/IFR_BaseS.h:
        * orbsvcs/orbsvcs/IFRService/IFR_BaseS.inl:
        * orbsvcs/orbsvcs/IFRService/IFR_BaseS.cpp:
        * orbsvcs/orbsvcs/IFRService/IFR_BaseS_T.h:
        * orbsvcs/orbsvcs/IFRService/IFR_BaseS_T.inl:
        * orbsvcs/orbsvcs/IFRService/IFR_BaseS_T.cpp:
        * orbsvcs/orbsvcs/IFRService/IFR_BasicS.h:
        * orbsvcs/orbsvcs/IFRService/IFR_BasicS.inl: